# celestial_objects

./: Cargo.toml  README.md
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
src/: calc.rs  coords.rs  lib.rs  serde_helpers.rs  traits.rs  travel.rs  types.rs  units.rs
src/tests/: database_examples.rs  systems_examples.rs
src/types/: mod.rs  objects.rs  properties.rs
tests/: systems-example-l10n.ron  systems-example.ron
