[package]
name = "celestial_objects"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
glam = { version = "0.29.0", features = ["serde"] }
regex = "1.10.6"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
serial_test = "3.1.1"
tempfile = "3.12.0"
