[package]
name = "celestial_objects"
version = "0.7.0"
edition = "2024"
authors = ["Victor von Rhein"]
license = "MIT OR Apache-2.0"
description = "Handling systems of stars, planets and moons that are orbiting each other."

[features]
i18n = ["dep:fluent-templates", "dep:unic-langid"]
tex = []

[dependencies]
approx = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
fluent-templates = { version = "0.11.0", optional = true }
glam = { version = "0.29.0", features = ["serde"] }
regex = "1.10.6"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "2.0.6"
unic-langid = { version = "0.9.5", features = ["macros"], optional = true }

[dev-dependencies]
serial_test = "3.1.1"
tempfile = "3.12.0"
